@startuml
package "Entities" {
  class User {
    +userId: Int <<PK>>
    +name: String
    +email: String <<unique>>
  }
  class Project {
    +projectId: Int <<PK>>
    +title: String
    +ownerId: Int <<FK>>
  }
  class Task {
    +taskId: Int <<PK>>
    +description: String
    +projectId: Int?
  }
  class Attachment {
    +attachmentId: Int <<PK>>
    +filePath: String
    +taskId: Int <<FK>>
  }
  class ProjectTaskCrossRef {
    +projectId: Int
    +taskId: Int
  }
}

User "1" --> "*" Project : owns
Project "1" --> "*" Attachment : has
Task "1" --> "*" Attachment : has
Project "*" -- "*" Task : many-to-many (via ProjectTaskCrossRef)
@enduml
